tests/ui/pin-ergonomics/impl-unpin.tait.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-unpin.rs:50:5
   |
LL |     impl Unpin for FooAlias {}
   |     ^^^^^^^^^^^^^^^--------
   |                    |
   |                    type alias impl trait is treated as if it were foreign, because its hidden type could be from a foreign crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-unpin.rs:52:5
   |
LL |     impl Unpin for BarAlias {}
   |     ^^^^^^^^^^^^^^^--------
   |                    |
   |                    type alias impl trait is treated as if it were foreign, because its hidden type could be from a foreign crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
